<resources>
    <string name="app_name">Siscambp Movil</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="recordar_credenciales">Recordar credenciales</string>
    <string name="image_logo_login">IMAGE LOGO LOGIN</string>
    <string name="filtro_manzanas">Filtro manzanas</string>
    <string name="camara">Camara</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="enviar_lectura">Enviar lectura</string>
    <string name="configuracion">Configuración</string>
    <string name="image_status">IMAGE STATUS</string>
    <string name="arrendador_p">Arrendador:</string>
    <string name="arrendatario_p">Arrendatario:</string>
    <string name="direccion_p">Dirección:</string>
    <string name="manzana_p">Manzana:</string>
    <string name="captura_lectura">Captura lectura</string>
</resources>
